# xmascode

./: Cargo.toml
benches/: d3bitset.rs  d3dumb.rs
input/: day2-5  day3-5
